# dictate-mac

./: .gitignore  AGENTS.md  LICENSE  README.md  build.sh  pyproject.toml  setup.py
assets/: DictateMac.icns
assets/_bundling/mlx_whisper/: timing.py
assets/_bundling/silero_vad/: __init__.py  model.py  utils_vad.py
assets/icon/: make_icon.py
src/dictate_mac/: __init__.py  __main__.py  audio.py  cli.py  config.py  hotkey.py  logutils.py  menubar.py  model_settings_dialog.py  selftest.py  state.py  transcriber.py  typer.py
tests/: dialog_smoke.py  inject_option.py
