[project]
name = "dictate-mac"
version = "0.3.0"
description = "Local voice dictation for macOS via mlx-whisper + Right Option hotkey"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [
    { name = "dictate-mac authors" }
]
dependencies = [
    "mlx>=0.32",
    "mlx-whisper",
    "huggingface_hub>=0.20",
    "sounddevice>=0.4.6",
    "silero-vad>=5.1",
    "onnxruntime>=1.17",
    "pyobjc-framework-Quartz>=10.2",
    "numpy>=1.26",
    "rumps>=0.4.0",
    "requests>=2.31",
] 

[project.scripts]
dictate-mac = "dictate_mac.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dictate_mac"]

[dependency-groups]
dev = ["py2app>=0.28"]  
